Ajout du responsive

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta description="Mon premier blog">
         <title>Mon blog</title>
+        <!--<link href="https://fonts.googleapis.com/css2?family=Cardo:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">-->
         <link rel="stylesheet" href="css\style.css">
+
     </head>
 
     <body>
         <header class="topbar">
             <nav>
-                <a class="active" href="index.html">Accueil</a>
-                <a href="article.html">Articles</a>
-                <a href="apropos.html">A propos</a>
-                <a href="contact.html">Contact</a>
+                <a class="menu-item active" href="index.html">Accueil</a>
+                <a class="menu-item" href="article.html">Articles</a>
+                <a class="menu-item important" href="apropos.html">A propos</a>
+                <a class="menu-item" href="contact.html">Contact</a>
             </nav> 
             <div class="social">
                 <a href="#" title="facebook"><img src="img\facebook.png" title="facebook"></a>
@@ -28,33 +30,64 @@
             <main class="main">
                 <div class="container">
                     <article class="article">
-                        <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
-                        <div class="article-date">Publié le 23 juin 2020</div>
-                        <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus. 
-                        </p>
+                        <div class="article-img">
+                            <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
+                        </div>
+                        <div class="article-content">
+                            <div class="article-date">Publié le 23 juin 2020</div>
+                            <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.    
+                            </p>
+                        </div>
                     </article>
-                    <article class="article" >
-                        <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
-                        <div class="article-date">Publié le 23 juin 2020</div>
-                        <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.                 </p>
+                    <article class="article">
+                        <div class="article-img">
+                            <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
+                        </div>
+                        <div class="article-content">
+                            <div class="article-date">Publié le 23 juin 2020</div>
+                            <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.    
+                            </p>
+                        </div>
                     </article>
-                    <article class="article" >
-                        <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
-                        <div class="article-date">Publié le 23 juin 2020</div>
-                        <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.                 </p>
+                    <article class="article">
+                        <div class="article-img">
+                            <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
+                        </div>
+                        <div class="article-content">
+                            <div class="article-date">Publié le 23 juin 2020</div>
+                            <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.    
+                            </p>
+                        </div>
                     </article>
-                    <article class="article" >
-                        <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
-                        <div class="article-date">Publié le 23 juin 2020</div>
-                        <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.                 </p>
+                    <article class="article">
+                        <div class="article-img">
+                            <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
+                        </div>
+                        <div class="article-content">
+                            <div class="article-date">Publié le 23 juin 2020</div>
+                            <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.    
+                            </p>
+                        </div>
+                    </article>
+                    <article class="article">
+                        <div class="article-img">
+                            <a href="article.html" class="article-img"><img src="img/image.png" alt="image"></a>
+                        </div>
+                        <div class="article-content">
+                            <div class="article-date">Publié le 23 juin 2020</div>
+                            <h2 class="article-title"><a href="article.html">Le statut de freelance</a></h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo veniam nisi perferendis, praesentium recusandae temporibus amet, delectus voluptas minus harum id quibusdam ullam officia? Provident iure ratione consequuntur eaque sed deserunt ab, facere odio officiis incidunt voluptates, reiciendis itaque cumque quis iusto adipisci voluptatum rem temporibus.    
+                            </p>
+                        </div>
                     </article>
                 </div>
             </main>
@@ -78,6 +111,26 @@
                 <li><a href="#">Astuces</a></li>
                 <li><a href="#">Bonnes pratiques</a></li>
             </ul>
+            <!--<hr>
+            <h4 class="sidebar-title">Auteurs</h4>
+            <ul>
+                <li><a href="#">High-Tech</a></li>
+                <li><a href="#">Concentré du Web</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Ressources</a></li>
+                <li><a href="#">Astuces</a></li>
+                <li><a href="#">Bonnes pratiques</a></li>
+            </ul>
+            <hr>
+            <h4 class="sidebar-title">Auteurs</h4>
+            <ul>
+                <li><a href="#">High-Tech</a></li>
+                <li><a href="#">Concentré du Web</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Ressources</a></li>
+                <li><a href="#">Astuces</a></li>
+                <li><a href="#">Bonnes pratiques</a></li>
+            </ul>-->
         </aside>
         </div>
             
